--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "packaging": "jar"
   },
   "dependencies": {
+    "@angular/animations": "^13.0.3",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "12.0.5",
     "@angular/compiler": "12.0.5",
     "@angular/core": "12.0.5",
@@ -83,6 +85,7 @@
     "bootstrap": "4.6.0",
     "bootswatch": "4.6.0",
     "dayjs": "1.10.5",
+    "ngx-bootstrap": "5.3.2",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "8.0.0",
     "rxjs": "6.6.7",
