--- a/angular.json
+++ b/angular.json
@@ -43,8 +43,12 @@
               { "glob": "axios.min.js", "input": "./node_modules/axios/dist", "output": "swagger-ui" },
               { "glob": "**/*", "input": "src/main/webapp/swagger-ui/", "output": "swagger-ui" }
             ],
-            "styles": ["src/main/webapp/content/scss/vendor.scss", "src/main/webapp/content/scss/global.scss"],
-            "scripts": []
+            "styles": [
+              "src/main/webapp/content/scss/vendor.scss",
+              "src/main/webapp/content/scss/global.scss",
+              "src/main/webapp/content/css/nivo-slider.css"
+            ],
+            "scripts": ["src/main/webapp/content/js/jquery.nivo.slider.js"]
           },
           "configurations": {
             "production": {
