--- a/package.json
+++ b/package.json
@@ -78,11 +78,12 @@
     "@angular/router": "12.0.5",
     "@fortawesome/angular-fontawesome": "0.9.0",
     "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/free-solid-svg-icons": "5.15.3",
+    "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@ng-bootstrap/ng-bootstrap": "9.1.3",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "bootstrap": "4.6.0",
+    "bootstrap-icons": "^1.8.1",
     "bootswatch": "4.6.0",
     "dayjs": "1.10.5",
     "ngx-bootstrap": "5.3.2",
