--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
     "@angular/core": "12.0.5",
     "@angular/forms": "12.0.5",
     "@angular/localize": "12.0.5",
-    "@angular/platform-browser": "12.0.5",
-    "@angular/platform-browser-dynamic": "12.0.5",
+    "@angular/platform-browser": "13.3.1",
+    "@angular/platform-browser-dynamic": "13.3.1",
     "@angular/router": "12.0.5",
     "@fortawesome/angular-fontawesome": "0.9.0",
     "@fortawesome/fontawesome-svg-core": "1.2.35",
@@ -82,13 +82,17 @@
     "@ng-bootstrap/ng-bootstrap": "9.1.3",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
+    "@types/jquery": "^3.5.14",
     "bootstrap": "4.6.0",
     "bootstrap-icons": "^1.8.1",
     "bootswatch": "4.6.0",
     "dayjs": "1.10.5",
+    "jquery": "^3.6.0",
     "ngx-bootstrap": "5.3.2",
     "ngx-infinite-scroll": "10.0.1",
+    "ngx-responsive-stack-table": "^1.0.2",
     "ngx-webstorage": "8.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "6.6.7",
     "swagger-ui-dist": "3.50.0",
     "tslib": "2.3.0",
