--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "@angular/common": "12.0.5",
     "@angular/compiler": "12.0.5",
     "@angular/core": "12.0.5",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "12.0.5",
     "@angular/localize": "12.0.5",
+    "@angular/material": "^11.2.0",
     "@angular/platform-browser": "13.3.1",
     "@angular/platform-browser-dynamic": "13.3.1",
     "@angular/router": "12.0.5",
