--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "ngx-bootstrap": "5.3.2",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-responsive-stack-table": "^1.0.2",
+    "ngx-toastr": "^14.2.1",
     "ngx-webstorage": "8.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "6.6.7",
