--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "bootswatch": "4.6.0",
     "dayjs": "1.10.5",
     "jquery": "^3.6.0",
+    "moment": "^2.29.2",
     "ngx-bootstrap": "5.3.2",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-responsive-stack-table": "^1.0.2",
