--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -32,7 +32,7 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:sqlserver://localhost:1433;database=sellphone_prod
+    url: jdbc:sqlserver://localhost:1433;encrypt=false;database=sellphone_prod;integratedSecurity=true
     username: sa
     password: 123456
     hikari:
