--- a/package.json
+++ b/package.json
@@ -74,13 +74,13 @@
     "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "12.0.5",
     "@angular/localize": "12.0.5",
-    "@angular/material": "^11.2.0",
+    "@angular/material": "^12.1.2",
     "@angular/platform-browser": "13.3.1",
     "@angular/platform-browser-dynamic": "13.3.1",
     "@angular/router": "12.0.5",
-    "@fortawesome/angular-fontawesome": "0.9.0",
-    "@fortawesome/fontawesome-svg-core": "1.2.35",
-    "@fortawesome/free-solid-svg-icons": "5.15.4",
+    "@fortawesome/angular-fontawesome": "0.10.2",
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@ng-bootstrap/ng-bootstrap": "9.1.3",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
@@ -99,6 +99,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "6.6.7",
     "swagger-ui-dist": "3.50.0",
+    "sweetalert2": "^11.0.18",
     "tslib": "2.3.0",
     "zone.js": "0.11.4"
   },
