--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -48,10 +48,24 @@ spring:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
     contexts: dev, faker
   mail:
-    host: localhost
-    port: 25
-    username:
-    password:
+    host: smtp.gmail.com
+    port: 587
+    username: anhlamvjp2@gmail.com
+    password: algremory69
+    protocol: smtp
+    tls: true
+    properties.mail.smtp:
+      auth: true
+      starttls.enable: true
+      ssl.trust: smtp.gmail.com
+  #        smpt:
+  #          starttls:
+  #            enable: true
+  #          socketFactory:
+  #            class: javax.net.ssl.SSLSocketFactory
+  #          auth: true
+  #          ssl: yes
+  #        tls: true
   messages:
     cache-duration: PT1S # 1 second, see the ISO 8601 standard
   thymeleaf:
