--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -32,7 +32,7 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:sqlserver://localhost:1433;encrypt=false;database=sellphone_prod;integratedSecurity=true
+    url: jdbc:sqlserver://localhost:1433;database=sellphone_prod;integratedSecurity=true
     username: sa
     password: 123456
     hikari:
@@ -50,7 +50,7 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: anhlamvjp2@gmail.com
+    username: sellphonealam@gmail.com
     password: algremory69
     protocol: smtp
     tls: true
@@ -103,7 +103,7 @@ jhipster:
         token-validity-in-seconds: 86400
         token-validity-in-seconds-for-remember-me: 2592000
   mail: # specific JHipster mail property, for standard properties see MailProperties
-    base-url: http://127.0.0.1:8080
+    base-url: http://127.0.0.1:9000
   logging:
     use-json-format: false # By default, logs are not in Json format
     logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
